# TBCNODE

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile-node  INSTALL.md  LICENSE  README.md  configure.ac  node.conf  start.sh
cmake/: libmultiprocess.cmake
contrib/: bitcoind.bash-completion
contrib/devtools/: copyright_header.py  optimize-pngs.py  plot_mempool_min_fee_curve.py  send-invalid-getdata.py  symbol-check.py
contrib/gitian-descriptors/: gitian-linux-all-arch.yml  gitian-linux.yml  gitian-win-all-arch.yml  gitian-win.yml
contrib/nchain/: Jenkinsfile
contrib/verifybinaries/: verify.sh
depends/: Makefile  funcs.mk  toolchain.cmake.in
doc/: Doxyfile  README_cli_rpc.md  release-notes-v1.0.5RC.md  release-notes-v3.3.0.md  release-notes-v3.3.1.md  release-notes.md  zmq.md
doc/man/: bitcoin-cli.1  bitcoin-tx.1  bitcoind.1
docs/plans/: cs_main-refactor-audit-log.md  cs_main-refactor-detailed-design.md  cs_main-refactor-plan.md  getrawtransaction-cs-main-bypass.md  mempool-ancestor-cleanup-plan.md  seqlock-memory-model.md
share/: on_prod_tag.sh
src/: CMakeLists.txt  Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.test.include  addrdb.cpp  addrman.cpp  amount.cpp  amount.h  async_file_reader.h  base58.cpp  big_int.cpp  big_int.h  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  blockencodings.cpp  blockfileinfostore.cpp  blockfileinfostore.h  blockstreams.h  blockvalidation.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkqueuepool.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  compat.h  config.cpp  config.h  (+83 more)
src/bench/: CMakeLists.txt  batchwrite_contention.cpp  bench.cpp  bench.h  bench_bitcoin.cpp  ccoins_caching.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  cscript.cpp  interpreter.cpp  rollingbloom.cpp
src/compat/: glibc_compat.cpp
src/config/: CMakeLists.txt  bitcoin-config.h.cmake.in
src/consensus/: consensus.h  params.h  validation.h
src/crypto/: CMakeLists.txt  chacha20.cpp  chacha20.h  chacha20poly1305.cpp  chacha20poly1305.h  poly1305.h  sha256.cpp  sha256.h
src/init/: bitcoin-node.cpp  bitcoind.cpp  node_ipc.h
src/interfaces/: echo.cpp  init.h  mining.h
src/ipc/: CMakeLists.txt  interfaces.cpp  process.cpp  process.h  stub.cpp
src/ipc/capnp/: common-types.h  common.capnp  echo.capnp  init-types.h  init.capnp  mining-types.h  mining.capnp  mining.cpp  protocol.cpp
src/ipc/libmultiprocess/include/mp/: proxy-types.h
src/ipc/test/: ipc_echo_round_trip.cpp  ipc_echo_round_trip.h  ipc_echo_tests.cpp  ipc_test.capnp  ipc_test.cpp  ipc_test.h  ipc_tests.cpp
src/mining/: assembler.cpp  assembler.h  candidates.cpp  candidates.h  factory.cpp  factory.h  gbt_snapshot.h  journal.cpp  journal.h  journal_builder.cpp  journal_builder.h  journal_change_set.cpp  journal_change_set.h  journal_entry.h  journaling_block_assembler.cpp  journaling_block_assembler.h  legacy.cpp  legacy.h  minerimpl.cpp  mining.h
src/net/: association.cpp  association.h  net.cpp  net.h  net_message.cpp  net_message.h  net_processing.cpp  net_processing.h  net_types.h  netaddress.cpp  netbase.cpp  netbase.h  node_stats.h  send_queue_bytes.h  stream.cpp  stream.h
src/node/: context.h  interfaces.cpp  miner.cpp  miner.h  mining_types.h
src/policy/: fees.cpp  policy.cpp  policy.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/rpc/: abc.cpp  blockchain.cpp  client.cpp  client.h  jsonwriter.cpp  jsonwriter.h  mining-fbb.cpp  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.cpp  rawtransaction.cpp  register.h  server.cpp  text_writer.h
src/script/: instruction.h  instruction_iterator.h  int_serialization.h  interpreter.cpp  interpreter.h  limitedstack.cpp  limitedstack.h  opcodes.cpp  opcodes.h  script.cpp  script.h  script_error.cpp  script_error.h  script_flags.h  script_num.cpp  script_num.h  sigcache.cpp  sigcache.h  standard.cpp  standard.h
src/secp256k1/: CMakeLists.txt  Makefile.am  configure.ac
src/seeder/: main.cpp
src/stratumv2/: bip324.cpp  bip324.h  stratumv2-backup.tar.xz  sv2_connman.cpp  sv2_connman.h  sv2_messages.cpp  sv2_messages.h  sv2_noise.cpp  sv2_noise.h  sv2_transport.cpp  sv2_transport.h  transport.cpp  transport.h
src/support/: events.h  lockedpool.cpp
src/test/: CMakeLists.txt  DoS_tests.cpp  alertnotify_tests.cpp  amount_tests.cpp  async_subscriber_tests.cpp  async_trim_tests.cpp  batchwrite_p99_tests.cpp  big_int_tests.cpp  block_info_tests.cpp  blockcheck_tests.cpp  blockencodings_tests.cpp  blockfile_reading_tests.cpp  blockvalidationstatus_tests.cpp  bloom_tests.cpp  bn_helpers.h  bn_op_tests.cpp  bswap_tests.cpp  chain_dispatcher_tests.cpp  chainstate_seqlock_tests.cpp  checkdatasig_tests.cpp  checkqueue_tests.cpp  coins_p02_dual_write_tests.cpp  coins_p03_getcoinconcurrent_tests.cpp  coins_tests.cpp  compress_tests.cpp  config_tests.cpp  cscript_tests.cpp  double_check_tests.cpp  enum_cast_tests.cpp  excessiveblock_tests.cpp  filled_miner_bill_v2_tests.cpp  gbt_snapshot_tests.cpp  getarg_tests.cpp  instruction_iterator_tests.cpp  int_serialization_tests.cpp  journal_tests.cpp  json_tests.cpp  libcuckoo_soak_tests.cpp  limitedstack_tests.cpp  lock_hierarchy_tests.cpp  (+49 more)
src/util/: check.cpp  check.h  macros.h  scope_guard.h  sock.cpp  sock.h
src/validation/: async_subscriber.h  async_trim.cpp  async_trim.h  chain_dispatcher.cpp  chain_dispatcher.h  chainstate.cpp  chainstate.h  double_check.h  gbt_snapshot.cpp  gbt_snapshot.h  lock_hierarchy.h  lock_hierarchy_scoped.h  metrics.cpp  metrics.h  per_chain_worker.cpp  per_chain_worker.h  signal_dispatcher.cpp  signal_dispatcher.h  topo_sort.h  tx_stash.cpp  tx_stash.h  worker_validate.cpp  worker_validate.h
src/with_schnorr_secp256k1/: CMakeLists.txt  schnorr_wrap.c  schnorr_wrap.h
test/: CMakeLists.txt
tools/: baseline-replay.py  p0-bench-32worker.sh  p0-tsan-72h.sh  smoke-roundtrip.sh
(+297 files in other folders)
